--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -49,68 +49,16 @@ body {
   border-radius: 5px;
 }
 
+.w-100 {
+  width: 100%;
+}
+
 /* BOOTSTRAP OVERWRITES */
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+.nav-pills button.active, .nav-pills .show > button {
   color: #343a40;
   background-color: #ced4da;
 }
 
-
-
-/* h1 {
-  font-size: 40px ;
-  color: white;
-  background-color: rgba(209, 90, 90, 0.637);
-  font-family:cursive;
-  text-align: center;
+.nav-pills button {
+  color: #0d6efd;
 }
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: burlywood;
-}
-
-.oculto {
-  display: none;
-}
-
-h3 {
-  color: #573005;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-li {
-  padding: 4px 0;
-}
-
-ul span {
-  padding: 0 10px;
-}
-
-#contenedorTotal {
-  text-align: right;
-}
-
-.flex-container {
-  display: flex;
-  justify-content: center;
-}
-
-.flex-item {
-  padding: 0 40px;
-}
-
-#productosSeleccionados {
-  border-bottom: 2px solid #180202;
-}
-
-#sinSeleccionar {
-  color: grey;
-}
-
-.text-align_center {
-  text-align: center;
-} */
